# unipka

./: CHANGELOG.md  pyproject.toml
model/: README.md  t_dwar_v_novartis_a_b.pt
src/unipka/: confgen.py  deltaG.py  dictionary.py  ensemble.py  layers.py  tautomerism.py  unimol.py
src/unipka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unipka/rules/: README.md  smarts_pattern.tsv
tests/: test.py  test1.py  test_workflow.py
